--- a/packages/react-native-win32/.flowconfig
+++ b/packages/react-native-win32/.flowconfig
@@ -91,6 +91,7 @@ suppress_type=$FlowFixMeState
 suppress_type=$FlowFixMeEmpty
 
 experimental.abstract_locations=true
+generate_tests=false
 
 [lints]
 sketchy-null-number=warn
