--- a/vnext/package.json
+++ b/vnext/package.json
@@ -22,9 +22,9 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "@jest/create-cache-key-function": "^26.5.0",
-    "@react-native-community/cli": "^4.13.0",
-    "@react-native-community/cli-platform-android": "^4.13.0",
-    "@react-native-community/cli-platform-ios": "^4.13.0",
+    "@react-native-community/cli": "^5.0.1-alpha.0",
+    "@react-native-community/cli-platform-android": "^5.0.1-alpha.0",
+    "@react-native-community/cli-platform-ios": "^5.0.1-alpha.0",
     "@react-native-windows/cli": "0.0.0-canary.42",
     "@react-native/assets": "1.0.0",
     "@react-native/normalize-color": "1.0.0",
@@ -64,7 +64,7 @@
     "just-scripts": "^0.44.7",
     "prettier": "1.19.1",
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4",
+    "react-native": "0.0.0-c901c1fbc",
     "react-native-platform-override": "^0.4.3",
     "react-native-windows-codegen": "0.1.10",
     "react-refresh": "^0.4.0",
@@ -73,7 +73,7 @@
   },
   "peerDependencies": {
     "react": "17.0.1",
-    "react-native": "0.0.0-19d4cc2d4"
+    "react-native": "0.0.0-c901c1fbc"
   },
   "beachball": {
     "defaultNpmTag": "canary",
