Integrate 12/2 Nightly Build
Commits: https://github.com/facebook/react-native/compare/19d4cc2d4...c901c1fbc

Interesting changes for us are changes to accomadate the new version of Metro borught in by the CLI, ScrollResponder fixes, bundling changes when using Hermes.

There were a whole bunch of ScrollView changes but I don't think any of them should affect us.

Wanting to take a closer look at ViewConfig refactoring soon since I think more may be exposed than previously.

--- a/vnext/PropertySheets/Bundle.props
+++ b/vnext/PropertySheets/Bundle.props
@@ -36,7 +36,8 @@
     <UseDevBundle Condition="'$(UseDevBundle)' == '' and '$(Configuration)' != 'Debug'">false</UseDevBundle>
 
     <!-- Extra arguments to pass to the bundler command -->
-    <BundlerExtraArgs Condition="'$(BundlerExtraArgs)' == ''"></BundlerExtraArgs>
+    <BundlerExtraArgs Condition="'$(BundlerExtraArgs)' == '' AND '$(UseHermes)' != 'true'"></BundlerExtraArgs>
+    <BundlerExtraArgs Condition="'$(BundlerExtraArgs)' == '' AND '$(UseHermes)' == 'true'">--minify false</BundlerExtraArgs>
 
     <!-- Command to use to create a bundle -->
     <BundleCliCommand Condition="'$(BundleCliCommand)' == ''">npx --no-install react-native bundle</BundleCliCommand>
