What happened here...

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-windows",
-  "version": "0.0.0",
+  "version": "0.0.0-canary.220",
   "license": "MIT",
   "repository": {
     "type": "git",
