--- a/.ado/jobs/universal.yml
+++ b/.ado/jobs/universal.yml
@@ -10,42 +10,31 @@ parameters:
     default:
       - BuildEnvironment: PullRequest
         Matrix:
-          ArmRelease:
-            BuildConfiguration: Release
+          - BuildConfiguration: Release
             BuildPlatform: ARM
-          X64Release:
-            BuildConfiguration: Release
+          - BuildConfiguration: Release
             BuildPlatform: x64
-          X86Debug:
-            BuildConfiguration: Debug
+          - BuildConfiguration: Debug
             BuildPlatform: x86
             LayoutHeaders: true
       - BuildEnvironment: Continuous
         Matrix:
-          ArmDebug:
-            BuildConfiguration: Debug
+          - BuildConfiguration: Debug
             BuildPlatform: ARM
-          ArmRelease:
-            BuildConfiguration: Release
+          - BuildConfiguration: Release
             BuildPlatform: ARM
-          Arm64Debug:
-            BuildConfiguration: Debug
+          - BuildConfiguration: Debug
             BuildPlatform: ARM64
-          Arm64Release:
-            BuildConfiguration: Release
+          - BuildConfiguration: Release
             BuildPlatform: ARM64
-          X64Debug:
-            BuildConfiguration: Debug
+          - BuildConfiguration: Debug
             BuildPlatform: x64
-          X64Release:
-            BuildConfiguration: Release
+          - BuildConfiguration: Release
             BuildPlatform: x64
-          X86Debug:
-            BuildConfiguration: Debug
+          - BuildConfiguration: Debug
             BuildPlatform: x86
             LayoutHeaders: true
-          X86Release:
-            BuildConfiguration: Release
+          - BuildConfiguration: Release
             BuildPlatform: x86
     
 jobs:
