--- a/.ado/jobs/universal.yml
+++ b/.ado/jobs/universal.yml
@@ -167,8 +167,9 @@ jobs:
     variables:
       - template: ../variables/vs2019.yml
     dependsOn: 
-      - ${{ each obj in parameters.buildMatrixPR }}:
-        - UniversalBuild${{ obj.BuildPlatform }}${{ obj.BuildConfiguration }}
+      - ${{ each config in parameters.buildMatrix }}:
+        - ${{ each obj in config.Matrix }}:
+          - UniversalBuild${{ obj.BuildPlatform }}${{ obj.BuildConfiguration }}
     pool:
       vmImage: $(VmImage)
     timeoutInMinutes: 60
