--- a/.ado/jobs/universal.yml
+++ b/.ado/jobs/universal.yml
@@ -41,7 +41,7 @@ parameters:
 jobs:
   - ${{ each config in parameters.buildMatrix }}:
     - ${{ each obj in config.Matrix }}:
-       # ${{ if eq(config.BuildEnvironment, parameters.buildEnvironment) }}:
+      - ${{ if eq(config.BuildEnvironment, parameters.buildEnvironment) }}:
           - job: UniversalBuild${{ obj.BuildPlatform }}${{ obj.BuildConfiguration }}
             variables:
               - template: ../variables/vs2019.yml
@@ -169,7 +169,8 @@ jobs:
     dependsOn: 
       - ${{ each config in parameters.buildMatrix }}:
         - ${{ each obj in config.Matrix }}:
-          - UniversalBuild${{ obj.BuildPlatform }}${{ obj.BuildConfiguration }}
+          - ${{ if eq(config.BuildEnvironment, parameters.buildEnvironment) }}:
+            - UniversalBuild${{ obj.BuildPlatform }}${{ obj.BuildConfiguration }}
     pool:
       vmImage: $(VmImage)
     timeoutInMinutes: 60
