--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -28,6 +28,16 @@ steps:
     inputs:
       versionSpec: ">=5.8.0"
 
+  - task: NodeTool@0
+    displayName: Installing Node
+    inputs:
+      versionSpec: '14.x' 
+
+  - task: CmdLine@2
+    displayName: Installing Yarm
+    inputs:
+      script: npm install -g yarn
+
   - template: yarn-install.yml
 
   - task: CmdLine@2
