--- a/.ado/templates/publish-build-artifacts-for-nuget.yml
+++ b/.ado/templates/publish-build-artifacts-for-nuget.yml
@@ -2,6 +2,8 @@ parameters:
   artifactName:
   contents:
   layoutHeaders: false
+  buildPlatform: x64
+  buildConfiguration: Debug
 
 steps:
   # Prepare headers for NuGet deployment
@@ -15,8 +17,8 @@ steps:
   - task: CopyFiles@2
     displayName: Copy NuGet artifacts
     inputs:
-      sourceFolder: $(Build.SourcesDirectory)/vnext/target/$(BuildPlatform)/$(BuildConfiguration)
-      targetFolder: $(Build.StagingDirectory)/$(BuildPlatform)/$(BuildConfiguration)
+      sourceFolder: $(Build.SourcesDirectory)/vnext/target/${{ parameters.buildPlatform }}/${{ parameters.buildConfiguration }}
+      targetFolder: $(Build.StagingDirectory)/${{ parameters.buildPlatform }}/${{ parameters.buildConfiguration }}
       contents: ${{parameters.contents}}
 
   - task: PublishBuildArtifacts@1
