--- a/vnext/PropertySheets/WinUI.props
+++ b/vnext/PropertySheets/WinUI.props
@@ -7,7 +7,7 @@
 
   <PropertyGroup Label="WinUI2x versioning">
 		<!--This value is also used by the CLI, see /packages/@react-native-windows/generate-windows -->
-    <WinUI2xVersion>2.5.0-prerelease.201027002</WinUI2xVersion>
+    <WinUI2xVersion>2.5.0</WinUI2xVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(UseWinUI3)'=='true'">
