Use stages to simplify conditions and dependencies between jobs

--- a/.ado/templates/macos-tests-job.yml
+++ b/.ado/templates/macos-tests-job.yml
@@ -1,11 +1,6 @@
-parameters:
-  name: ''
-
 jobs:
-  - job: ${{ parameters.name }}
+  - job: MacTests
     displayName: macOS Tests
-    dependsOn: Setup
-    condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
 
     variables:
       - template: ../variables/macos.yml
